# CameraFTP

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  README.md  build.sh  config.json  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  mobile.toml  tauri.conf.json  windows-app-manifest.xml
src-tauri/.cargo/: config.toml
src-tauri/bindings/: AiEditConfig.ts  ProviderConfig.ts  SeedEditConfig.ts
src-tauri/resources/luts/: ARRI_ALEXA_Classic-709_VLog.cube  FLog2C_to_ACROS_65grid_V.1.00.cube  FLog2C_to_ASTIA_65grid_V.1.00.cube  FLog2C_to_CLASSIC-CHROME_65grid_V.1.00.cube  FLog2C_to_CLASSIC-Neg._65grid_V.1.00.cube  FLog2C_to_ETERNA-BB_65grid_V.1.00.cube  FLog2C_to_ETERNA_65grid_V.1.00.cube  FLog2C_to_FLog2C-709_65grid_V.1.00.cube  FLog2C_to_PRO-Neg.Std_65grid_V.1.00.cube  FLog2C_to_PROVIA_65grid_V.1.00.cube  FLog2C_to_REALA-ACE_65grid_V.1.00.cube  FLog2C_to_Velvia_65grid_V.1.00.cube  Fujifilm_ACROS_VLog.cube  Fujifilm_ASTIA_VLog.cube  Fujifilm_CLASSIC-CHROME_VLog.cube  Fujifilm_CLASSIC-Neg_VLog.cube  Fujifilm_ETERNA-3513DI_VLog.cube  Fujifilm_ETERNA-BB_VLog.cube  Fujifilm_ETERNA_VLog.cube  Fujifilm_PRO-Neg.-Std_VLog.cube  Fujifilm_PROVIA_VLog.cube  Fujifilm_REALA-ACE_VLog.cube  Fujifilm_Velvia_VLog.cube  Kodak_VISION-2383_VLog.cube  Leica_Classic_VLog.cube  Leica_Natural_VLog.cube  RED_Achromic_VLog.cube  RED_FilmBias-BB_VLog.cube  RED_FilmBias-Offset_VLog.cube  RED_FilmBias_VLog.cube  RED_Rec.709_VLog.cube
src-tauri/src/: config.rs  config_service.rs  constants.rs  crypto.rs  error.rs  exif_support.rs  image_utils.rs  lib.rs  network.rs
src-tauri/src/ai_edit/: config.rs  image_processor.rs  mod.rs  progress.rs  service.rs
src-tauri/src/crypto/: tls.rs
(+230 files in other folders)
